--- a/try2.css
+++ b/try2.css
@@ -5,7 +5,6 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1f 1fr;
     grid-template-rows: repeat(4, 1fr);
-    grid-template-areas: ". . . . " ". top top ." ". top top ." ". bot bot .";
     height: 100vh;
     padding: 0;
     margin: 0;
@@ -36,14 +35,13 @@ body {
 
 .box-2 {
     background-color: lightsteelblue;
-    grid-area: box2;
+    grid-area: box
 }
 
 .footer {
     background-color: mediumpurple;
     display: grid;
     align-self: flex-end;
-    grid-area: bot;
 }
 
 
