--- a/it's ok.css
+++ b/it's ok.css
@@ -2,12 +2,19 @@ body {
     font-family: "Karla", sans-serif;
     font-size: 16px;
     background-color: lightgray;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1f 1fr;
-    grid-template-rows: repeat(4, 1fr);
     height: 100vh;
     padding: 0;
     margin: 0;
+}
+
+.fill {
+    background-color: lightcoral;
+    display: grid;
+    justify-content: center;
+    align-self: center;
+    height: 97vh;
+    margin: 0;
+    padding: 0;
 }
 
 .profile-card {
@@ -24,8 +31,7 @@ body {
 
 .header {
     background-color: lightgreen;
-    grid-column: 1/3;
-    grid-area: header;
+    grid-column: header;
 }
 
 .box-1 {
@@ -35,13 +41,11 @@ body {
 
 .box-2 {
     background-color: lightsteelblue;
-    grid-area: box
+    grid-area: box2;
 }
 
 .footer {
     background-color: mediumpurple;
-    display: grid;
-    align-self: flex-end;
 }
 
 
