--- a/style-single-price-grid.css
+++ b/style-single-price-grid.css
@@ -2,18 +2,24 @@ body {
     font-family: "Karla", sans-serif;
     font-size: 16px;
     background-color: lightgray;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1f 1fr;
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-areas: ". . . . " ". top top ." ". top top ." ". bot bot .";
     height: 100vh;
     padding: 0;
     margin: 0;
 }
 
+.fill {
+    background-color: hsl(204, 43%, 93%);
+    display: grid;
+    justify-content: center;
+    align-self: center;
+    height: 97vh;
+    margin: 0;
+    padding: 0;
+}
+
 .profile-card {
-    background-color: salmon;
-    width: 60vw;
+    background-color: rgb(255, 255, 255);
+    width: 50vw;
     height: 70vh;
     border-radius: 10px;
     grid-area: top;
@@ -21,29 +27,99 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(3, 1fr);
     grid-template-areas: "header header" "box1 box2" "box1 box2";
+    box-shadow: 11px 14px 29px -8px rgba(176, 173, 176, 1);
 }
 
 .header {
-    background-color: lightgreen;
-    grid-column: 1/3;
-    grid-area: header;
+    background-color: rgb(255, 255, 255);
+    grid-column: header;
+    padding: 30px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .box-1 {
-    background-color: lightskyblue;
+    background-color: hsl(179, 62%, 43%);
     grid-area: box1;
+    border-radius: 0px 0px 0px 10px;
 }
 
 .box-2 {
-    background-color: lightsteelblue;
+    background-color: hsl(178, 60%, 49%);
     grid-area: box2;
+    border-radius: 0px 0px 10px 0px;
+}
+
+.signup {
+    background-color: hsl(71, 73%, 54%);
+    color: white;
 }
 
 .footer {
-    background-color: mediumpurple;
-    display: grid;
-    align-self: flex-end;
-    grid-area: bot;
+    background-color: hsla(0, 0%, 100%, 0.7);
+    text-align: center;
+}
+
+h1 {
+    color: hsl(178, 60%, 49%);
+    font-weight: bold;
+}
+
+h2 {
+    color: hsl(71, 73%, 54%);
+    font-weight: 400;
+}
+
+h3 {
+    color: hsl(217, 5%, 70%);
+    font-weight: 400;
+}
+
+h4 {
+    color: white;
+    padding: 20px 30px 0px 30px;
+}
+
+h5 {
+    color: white;
+    font-weight: 700;
+}
+
+p {
+    color: hsla(0, 0%, 100%, 0.7)
+}
+
+.box-2>p {
+    text-align: left;
+    padding: 0px 50px 0px 30px;
+    font-size: 16px;
+    letter-spacing: 0.028rem;
+}
+
+.box-1>h5 {
+    font-size: 32px;
+    margin: 0px 50px 0px 30px;
+}
+
+.box-1>p {
+    position: relative;
+    margin-top: -28px;
+    margin-left: 100px;
+    border-radius: 50px 20px;
+}
+
+p.access {
+    color: hsla(0, 0%, 100%, 0.7);
+    margin-top: -50px;
+    margin-left: auto;
+}
+
+.signup {
+    position: absolute;
+    width: 290px;
+    height: 40px;
+    margin-top: 80px;
+    margin-left: 30px;
+    border-radius: 5px;
 }
 
 
